<resources>
    <string name="app_name">Bike Squad</string>
    <string name="google_maps_key">AIzaSyAwTJNcHyDpVGodDTKQE2vehnSZr4XpihU</string>

    //Message
    <string name="message_loading">loading</string>

    //Auth
    <string name="auth_message_user_email">Sign in with your Email and Password</string>
    <string name="auth_message_user_gmail">Sign in with your Google account</string>
    <string name="auth_message_signing_in">Signing in</string>
    <string name="auth_message_auth_failure_wrong_email_password">Authentication failed, check your
        email and password or sign up</string>
    <string name="auth_message_auth_failure">Authentication failed, please try again</string>
    <string name="auth_message_email">Email</string>
    <string name="auth_message_register">Register</string>


    //Verify
    <string name="ver_message_log_out">log out</string>
    <string name="ver_message_verify_email">verify email</string>
    <string name="ver_message_verify_send_to">Verification email sent to </string>
    <string name="ver_message_title">Verification</string>
    <string name="ver_message_detail">\n   we\'ll send a verification link to the email address you used
        to create the account. If you don\'t verify your address, you may not be able to access
        certain Bike Squad products or features.</string>
    <string name="ver_message_detail_after_send">\n   We already send a verification to your email.
        \n   Ifyou do not receive the confirmation message within a few minutes , please check your
        Junk E-mail folder just in case the confirmation email got delivered there instead of your
        inbox. \n   If so, select the confirmation message and click Not Junk, which will allow
        future messages to get through.</string>

    //Error message
    <string name="err_message_required">Required</string>
    <string name="err_message_not_email">Invalid email</string>
    <string name="err_message_something_wrong">Something wrong, try again..</string>
    <string name="err_message_connection_failure">Network connection error \n Please check your connection</string>
    <string name="err_message_something_wrong_short">Something wrong</string>

    //Language
    <string name="language_thailand" translatable="false"> ภาษาไทย</string>
    <string name="language_english" translatable="false"> English</string>

    //Normal message
    <string name="message_back">Back</string>
    <string name="message_close">Close</string>
    <string name="message_retry">Retry</string>
    <string name="app_message_ok">OK</string>
    <string name="app_message_confirm">Confirm</string>
    <string name="app_message_cancel">Cancel</string>
    <string name="app_message_send_an_email">Verify Email</string>
    <string name="app_message_request_permission_call">Please allow us to make a Call</string>
    <string name="app_message_permission_denied">Permission denied</string>
    <string name="app_message_confirm_to_close_app">Press back again to close</string>
    <string name="app_message_dismiss">Dismiss</string>
    <string name="app_message_yes">Yes</string>
    <string name="app_message_no">No</string>
    <string name="app_message_call">Call</string>
    <string name="app_message_app_language">Application language is </string>
    <string name="app_message_language">language</string>
    <string name="app_message_log_out">log out</string>
    <string name="err_message_connecting">Connecting . .</string>
    <string name="app_message_logging_out">Logging out . . .</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_settings">Settings</string>
    <string name="app_message_select_route">Select a route to create an event</string>
    <string name="message_back_press">Press again to Exit</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Bike Squad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //auth
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_log_out">Log Out</string>
    <string name="auth_message_welcome_back">Welcome back.</string>
    <string name="auth_message_welcome">Welcome to Bike Squad</string>

    //Menu
    <string name="menu_main_profile">Profile</string>
    <string name="menu_main_friends">Friends</string>
    <string name="menu_main_event">Event</string>
    <string name="menu_main_route">Route</string>
    <string name="menu_main_Bike">Biking</string>
    <string name="menu_main_setting">Settings</string>

    //tab title
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="heading_route">Route</string>
    <string name="heading_top_route">Top Route</string>

    //Profile
    <string name="profile_message_weight">Weight</string>
    <string name="profile_message_height">Height</string>
    <string name="profile_message_privacy">Private account</string>
    <string name="profile_message_birth_date">Birth date</string>
    <string name="profile_message_phone_number">Phone number</string>
    <string name="profile_message_username">Display name</string>
    <string name="profile_message_public">Public</string>
    <string name="profile_message_private">Private</string>
    <string name="profile_message_save">Save</string>
    <string name="profile_message_provider">Provider</string>
    <string name="profile_message_detail">   The user information is follow by your email information
        if you want to change any information above you can directly change as your Google email.</string>
    <string name="profile_message_advance_opt">Advance option</string>
    <string name="profile_message_delete_account">Delete account</string>
    <string name="profile_message_edit_account">Edit account</string>
    <string name="profile_message_prompt_delete_title">Confirm to delete your account</string>
    <string name="profile_message_prompt_delete">Delete an account that mean the your account is
        permanently deleted and can not be back.</string>
    <string name="profile_message_prompt_require_pass_for_delete">To confirm that, please type your
        email password to delete your Bike Squad\'s account</string>
    <string name="profile_message_password">Password</string>
    <string name="profile_message_cry_of_delete">We are very sad that for your decision to leave us.
        However, you can always come back to restart with us.</string>
    <string name="profile_message_edit_user_title">Edit User Information</string>
    <string name="profile_message_edit_user_result">Your information had edited successfully</string>

    //post
    <string name="post_message_write">Write your post &#8320; &#8320; &#8320;</string>

    //Log out
    <string name="sign_out_message_title">Log out confirmation</string>
    <string name="sign_out_message_tip">Remember, You can stay signed in away as long as you using this device.</string>
    <string name="sign_out_message_crying">Are you sure to LOG OUT? We will regret if without you.</string>
    <string name="sign_out_message_ask_back">Please back. We will waiting for you.</string>
    <string name="new_message_body_title">Title</string>
    <string name="new_message_body_detail">Detail</string>
    <string name="new_message_title">New Event</string>
    <string name="write_a_comment">writing comment . .</string>
    <string name="new_message_post">post</string>

    //Route
    <string name="route_message_dangerous">Dangerous : </string>
    <string name="route_message_difficult">Difficult : </string>
    <string name="start_tracking">Start Tracking</string>

</resources>
