<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/img_users"
            android:title="@string/menu_main_profile" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/img_friendship"
            android:title="@string/menu_main_friends" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/img_event"
            android:title="@string/menu_main_event" />
        <item
            android:id="@+id/nav_route"
            android:icon="@drawable/img_route"
            android:title="@string/menu_main_route" />
        <item
            android:id="@+id/nav_bike"
            android:icon="@drawable/img_bike"
            android:title="@string/menu_main_Bike" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/img_settings"
                android:title="@string/menu_main_setting" />
        </menu>
    </item>

</menu>
