<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jaylerrs.bikesquad.auth.views.UserVerifyFragment">

    <ImageView
        android:id="@+id/img_verify_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_verify_title"
        android:text="@string/ver_message_title"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_verify_detail"
        android:layout_below="@+id/txt_verify_title"
        android:text="@string/ver_message_detail"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/grey_300"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_verify_log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ver_message_log_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_verify_submit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ver_message_verify_email"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
