<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bike_background"
    android:id="@+id/relate_splash_base"
    tools:context="com.jaylerrs.bikesquad.splash.SplashActivity">

    <RelativeLayout
        android:id="@+id/relate_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:id="@+id/progress_splash"
            android:layout_width="match_parent"
            android:layout_above="@+id/txt_splash_message"
            android:layout_marginBottom="10dp"
            android:layout_height="40dp"/>
        <TextView
            android:id="@+id/txt_splash_message"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textAllCaps="true"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relate_splash_verify"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/txt_splash_warning_title"
            android:layout_width="match_parent"
            android:text="@string/ver_message_title"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_above="@+id/txt_splash_warning"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_splash_warning"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:text="@string/ver_message_detail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="18sp"
            android:layout_height="250dp" />

        <Button
            android:id="@+id/verify_log_out_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:theme="@style/ThemeOverlay.MyDangerousButton"
            android:text="@string/btn_log_out"/>

        <Button
            android:id="@+id/verify_email_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/verify_log_out_button"
            android:layout_marginBottom="10dp"
            android:theme="@style/ThemeOverlay.MyBlueButton"
            android:text="@string/app_message_send_an_email"/>

    </RelativeLayout>

</RelativeLayout>
