<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="com.jaylerrs.bikesquad.users.ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="15dp"
        android:src="@drawable/img_users"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txt_profile_name"
        android:layout_width="wrap_content"
        android:layout_toEndOf="@+id/img_profile_image"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/txt_profile_email"
        android:layout_below="@id/txt_profile_name"
        android:layout_toEndOf="@+id/img_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"/>
    <TextView
        android:id="@+id/txt_profile_public_key"
        android:layout_below="@id/txt_profile_email"
        android:layout_toEndOf="@+id/img_profile_image"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="top"
        android:text="@string/app_name"/>

    <TextView
        android:id="@+id/txt_profile_detail"
        android:layout_below="@id/img_profile_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="@dimen/layout_value_10"
        android:text="@string/profile_message_detail"/>

    <TextView
        android:id="@+id/txt_profile_phone"
        android:layout_below="@id/txt_profile_detail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="50dp"
        android:text="@string/profile_message_username"/>

    <TextView
        android:id="@+id/txt_profile_username_value"
        android:layout_below="@id/txt_profile_detail"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:paddingEnd="50dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="@dimen/content_padding"
        android:text="@string/profile_message_username"/>

    <TextView
        android:id="@+id/txt_profile_birth_date"
        android:layout_below="@id/txt_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="50dp"
        android:text="@string/profile_message_birth_date"/>

    <TextView
        android:id="@+id/txt_profile_birth_date_value"
        android:layout_below="@id/txt_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:paddingEnd="50dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="@dimen/content_padding"
        android:text="@string/profile_message_birth_date"/>

    <EditText
        android:id="@+id/edt_profile_birth_date_value"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:padding="5dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:layout_marginEnd="50dp"
        android:paddingStart="@dimen/content_padding"
        style="@style/button_square_style"
        android:hint="@string/profile_message_birth_date"
        android:textAlignment="textEnd"
        android:layout_below="@+id/txt_profile_phone"
        android:layout_alignStart="@+id/edt_profile_weight_value"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_profile_weight"
        android:layout_below="@id/txt_profile_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="50dp"
        android:text="@string/profile_message_weight"/>

    <TextView
        android:id="@+id/txt_profile_weight_value"
        android:layout_below="@id/txt_profile_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingEnd="50dp"
        android:text="@string/profile_message_weight"/>

    <EditText
        android:id="@+id/edt_profile_weight_value"
        android:layout_below="@id/txt_profile_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textAlignment="textEnd"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/txt_profile_birth_date"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="@dimen/content_padding"
        style="@style/button_square_style"
        android:hint="@string/profile_message_weight"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/txt_profile_height"
        android:layout_below="@id/txt_profile_weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="50dp"
        android:text="@string/profile_message_height"/>

    <TextView
        android:id="@+id/txt_profile_height_value"
        android:layout_below="@id/txt_profile_weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingEnd="50dp"
        android:text="@string/profile_message_height"/>

    <EditText
        android:id="@+id/edt_profile_height_value"
        android:layout_below="@id/txt_profile_weight"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:textAlignment="textEnd"
        android:layout_toEndOf="@+id/txt_profile_birth_date"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingStart="@dimen/content_padding"
        style="@style/button_square_style"
        android:visibility="gone"
        android:hint="@string/profile_message_height"/>

    <TextView
        android:id="@+id/txt_profile_privacy"
        android:layout_below="@id/txt_profile_height"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingBottom="@dimen/content_padding"
        android:paddingEnd="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/profile_message_privacy"/>

    <Switch
        android:id="@+id/swt_profile_privacy_value"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:paddingEnd="50dp"
        android:clickable="false"
        android:layout_below="@id/txt_profile_height"/>

    <Switch
        android:id="@+id/swt_profile_privacy_edt"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:paddingEnd="50dp"
        android:visibility="gone"
        android:layout_below="@id/txt_profile_height"/>

    <TextView
        android:id="@+id/txt_profile_back"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingStart="10dp"
        android:paddingEnd="40dp"
        android:gravity="center_vertical"
        android:text="@string/message_back"/>

    <Button
        android:id="@+id/edt_profile_save"
        android:layout_below="@+id/txt_profile_privacy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/profile_message_save"
        android:visibility="gone"
        android:layout_alignParentStart="true"
        android:theme="@style/ThemeOverlay.MyGreenButton"/>
    <Button
        android:id="@+id/edt_profile_cancel"
        android:layout_below="@+id/txt_profile_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/edt_profile_save"
        android:text="@string/app_message_cancel"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:theme="@style/ThemeOverlay.MyDangerousButton"/>

    <Button
        android:id="@+id/btn_profile_advance_option"
        android:layout_width="match_parent"
        android:layout_toEndOf="@+id/txt_profile_back"
        android:layout_height="60dp"
        android:theme="@style/ThemeOverlay.MyDarkButton"
        android:text="@string/profile_message_advance_opt"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/btn_profile_advance_log_out"
        android:layout_above="@+id/btn_profile_advance_edit_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_toEndOf="@+id/txt_profile_back"
        android:text="@string/ver_message_log_out"
        android:theme="@style/ThemeOverlay.MyDangerousButton"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_profile_advance_edit_account"
        android:layout_above="@+id/btn_profile_advance_option"
        android:layout_toEndOf="@+id/txt_profile_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/profile_message_edit_account"
        android:visibility="gone"
        android:theme="@style/ThemeOverlay.MyBlueButton"/>

    <Button
        android:id="@+id/btn_profile_advance_delete_account"
        android:layout_above="@+id/btn_profile_advance_log_out"
        android:layout_toEndOf="@+id/txt_profile_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/profile_message_delete_account"
        android:visibility="gone"
        android:theme="@style/ThemeOverlay.MyDangerousButton"/>

</RelativeLayout>
